--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -25,7 +25,7 @@ jobs:
         uses: jsdaniell/create-json@1.1.2
         with:
           # it uses the name from your settings that was send as then tokenFileName parameter
-          name: 'design-tokens-example.json'
+          name: 'design-tokens.tokens.json'
           # it uses the json string that was send as the tokens parameter
           json: ${{ github.event.client_payload.tokens }}
           # it uses the directory named "tokens" to store this json file (change this if you changed it above to use a different folder)
@@ -41,7 +41,7 @@ jobs:
         run: 'npm i && npm run transform-tokens'
       # We now create a pull request 
       - name: Create PR 
-        uses: peter-evans/create-pull-request@v3
+        uses: oliverkierepka/create-pull-request@v3
         with:
           commit-message: "Tokens updated"
           title: "Design tokens updated"
